--- a/src/Mocument/Mocument.Web/Site.Master
+++ b/src/Mocument/Mocument.Web/Site.Master
@@ -32,6 +32,7 @@
                     <Items>
                         <asp:MenuItem NavigateUrl="~/Default.aspx" Text="Home"/>
                         <asp:MenuItem NavigateUrl="~/About.aspx" Text="About"/>
+                        <asp:MenuItem NavigateUrl="~/Manage/MyTapes.aspx" Text="My Tapes"/>
                     </Items>
                 </asp:Menu>
             </div>
